[tool.poetry]
name = "pyfixfmt"
version = "0.9.0"
description = """Run several python fixers over a python file.

It will respect the settings in your `pyproject.toml`.

Provides both a file-based and string-based API, as well as able
to be run from the command line.
"""

license = "talk to josh"
repository = "https://github.com/untitled-ai/pyfixfmt"
homepage = "https://github.com/untitled-ai/pyfixfmt"

authors = [
  "TJ DeVries <devries.timothyj@gmail.com>",
  "Josh Albrecht <josh@sourceress.com",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
black = "^19.10b0"
autoflake = "^1.3.1"
isort = "^4.3.21"



[tool.isort]
line_length = 119
known_first_party = 'tests'
indent = '    '
force_single_line = true
default_section = 'FIRSTPARTY'
skip_glob = ''
case_sensitive = true

[tool.black]
line_length = 119
target_versions = ['PY36']
exclude = '''
(
    /(
        \.git
    |   \.mypy_cache
    |   \.tox
    |   \.venv

    |   venv
  )
)
'''

[tool.formatters.python]
ignore_import_changes = []
do_not_remove_imports = []
