[tool.poetry]
name = "pyfixfmt"
version = "0.9.2"
description = "Run several python fixers over a python file, to provide simple, deterministic code formatting."

license = "MIT"
repository = "https://github.com/untitled-ai/pyfixfmt"
homepage = "https://github.com/untitled-ai/pyfixfmt"

authors = [
  "TJ DeVries <devries.timothyj@gmail.com>",
  "Josh Albrecht <josh@sourceress.com",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
black = ">=20.8b1"
autoflake = ">=1.4"
isort = ">=4.3.21"



[tool.isort]
line_length = 119
known_first_party = 'tests'
indent = '    '
force_single_line = true
default_section = 'FIRSTPARTY'
skip_glob = ''
case_sensitive = true

[tool.black]
line_length = 119
target_versions = ['PY36']
exclude = '''
(
    /(
        \.git
    |   \.mypy_cache
    |   \.tox
    |   \.venv

    |   venv
  )
)
'''

[tool.formatters.python]
ignore_import_changes = []
do_not_remove_imports = []
